@@ -674,72 +674,3 @@ function slick_get_admin_summary($field, $instance, $view_mode, $module) {
   }
   return $summary;
 }
-
-/**
- * Gets supported Slick skins, and additional ones for select options.
- *
- * @param string $group
- *   The skin group name.
- * @param bool $all
- *   The flag to limit the skins, if FALSE only those specified within $group
- *   returned, otherwise $group is excluded.
- *
- * @return array
- *   An array of available skins excluding the $group if specified.
- *
- * @deprecated to drop.
- */
-function slick_skins_options($group = 'lightbox', $all = TRUE) {
-  $skins = $groups = array();
-  foreach (slick_skins() as $skin => $properties) {
-    if (!empty($group) && !empty($properties['group']) && $properties['group'] == $group) {
-      $groups[$skin] = $properties['name'];
-      continue;
-    }
-    $skins[$skin] = $properties['name'];
-  }
-
-  return $group && !$all ? $groups : $skins;
-}
-
-/**
- * Returns supported Slick skin dots for select options.
- *
- * @return array
- *   The associative array of available skin dots.
- *
- * @deprecated to drop.
- */
-function slick_dots_options() {
-  $dots = &drupal_static(__FUNCTION__, NULL);
-
-  if (!isset($dots)) {
-    $dots = array();
-    foreach (slick_dots() as $key => $properties) {
-      $dots[$key] = $properties['name'];
-    }
-  }
-
-  return $dots;
-}
-
-/**
- * Returns supported Slick skin arrows for select options.
- *
- * @return array
- *   The associative array of available skin arrows.
- *
- * @deprecated to drop.
- */
-function slick_arrows_options() {
-  $arrows = &drupal_static(__FUNCTION__, NULL);
-
-  if (!isset($arrows)) {
-    $arrows = array();
-    foreach (slick_arrows() as $key => $properties) {
-      $arrows[$key] = $properties['name'];
-    }
-  }
-
-  return $arrows;
-}
